--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -82,11 +82,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n",
+      "bob\n"
+     ]
+    }
+   ],
    "source": [
-    "# Make the same code as above using the constructor\n"
+    "# Make the same code as above using the constructor\n",
+    "class Student:\n",
+    "        def __init__(self, id, name):\n",
+    "            self.sid = id\n",
+    "            self.sname = name\n",
+    "            \n",
+    "        \n",
+    "            \n",
+    "name = \"bob\";id = 101\n",
+    "s1 = Student(id,name)\n",
+    "print (s1.sid)\n",
+    "print (s1.sname)\n",
+    "\n"
    ]
   },
   {
@@ -1940,7 +1961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1954,14 +1975,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.7"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "32cd87c0c55905266dc8232ebf1148f668af0d9324249c125246585210a29cd6"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
