--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -142,11 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
-    "# Make the same code as above using the constructor\n"
+    "# Make the same code as above using the constructor\n",
+    "class Rectangle:\n",
+    "    def __init__(self,width,height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    \n",
+    "    def getArea(self):\n",
+    "        return self.height * self.width\n",
+    "\n",
+    "r1 = Rectangle(10,20)\n",
+    "print(r1.getArea())"
    ]
   },
   {
@@ -165,16 +183,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 10\n"
+     ]
+    }
+   ],
    "source": [
     "## Answer to the above code. Is it possble to access the width and height directly?\n",
     "\n",
     "\n",
     "## In Python, we can use the __ prefix to make attributes private.\n",
     "## Private attributes cannot be accessed directly from outside the class.\n",
-    "## We need to use the getter and setter methods to access and modify private attributes.\n"
+    "## We need to use the getter and setter methods to access and modify private attributes.\n",
+    "r1 = Rectangle(10,20)\n",
+    "print(r1.height,r1.width)"
    ]
   },
   {
@@ -264,9 +292,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Point' object has no attribute 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m (p1\u001b[38;5;241m.\u001b[39m_x)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m (p1\u001b[38;5;241m.\u001b[39m_y)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m (p1\u001b[38;5;241m.\u001b[39mx)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute 'x'"
+     ]
+    }
+   ],
    "source": [
     "print (p1._x)\n",
     "print (p1._y)\n",
@@ -281,7 +329,12 @@
     "<h4> Questions </h4>\n",
     "<font size=\"5\">\n",
     "1. Question 1: Is it possble to access the _x and y directly without using the getter and setter methods? <br>\n",
+    "\n",
+    "yes as it is only a naming convention\n",
+    "\n",
     "2. Question 2: What is the difference between the code with _ prefix and the code without _ prefix? <br>\n",
+    "\n",
+    "to call the code you need to use the _ and the one without it you call it without the _\n",
     "3. Question 3: Why can we access the _x and _y directly without the getter and setter methods even though they are non-public attributes? <br>\n",
     "    answer: Because it is just a convention.\n",
     "</section>\n",
@@ -335,20 +388,42 @@
     "<h4> Questions </h4>\n",
     "<font size=\"5\">\n",
     "1. Question 1: Is it possble to access the __width and __height directly? <br>\n",
+    "no\n",
     "2. Question 2: Suggest a way to access the __width and __height directly. Answer: get_width() and get_height(). Show the code<br>\n",
     "3. Question 3: What is the difference between the code with __ prefix and the code without __ prefix? <br>\n",
+    "with the prefix it acts as private variables\n",
     "4. Question 4: is there a way to access the __width and __height directly without using the getter and setter methods? <br>\n",
-    "</section>\n"
+    "</section>\n",
+    "with properties\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Rectangle' object has no attribute '__width'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m                \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__height \u001b[38;5;241m=\u001b[39m height\n\u001b[0;32m      7\u001b[0m r1 \u001b[38;5;241m=\u001b[39m Rectangle(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(r1\u001b[38;5;241m.\u001b[39m__width)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(r1\u001b[38;5;241m.\u001b[39m__height)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Rectangle' object has no attribute '__width'"
+     ]
+    }
+   ],
    "source": [
     "# Make the same code as above using the constructor\n",
-    "# Answer to the above code. Is it possble to access the width and height directly? Like r1.__width?\n"
+    "# Answer to the above code. Is it possble to access the width and height directly? Like r1.__width?\n",
+    "class Rectangle:\n",
+    "       def __init__(self, width, height):\n",
+    "               self.__width = width\n",
+    "               self.__height = height\n",
+    "r1 = Rectangle(10, 20)\n",
+    "print(r1.__width)\n",
+    "print(r1.__height)"
    ]
   },
   {
@@ -378,9 +453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "class Rectangle:\n",
     "    def __init__(self, width, height):\n",
@@ -467,18 +551,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "called getwidth\n",
+      "10\n",
+      "called getheight\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "## Code the same code as above with property class\n"
+    "## Code the same code as above with property class\n",
+    "class Rectangle:\n",
+    "    def __init__(self, width, height):\n",
+    "        self._width = width\n",
+    "        self._height = height\n",
+    "    \n",
+    "    def getwidth(self):\n",
+    "        print (\"called getwidth\")\n",
+    "        return self._width\n",
+    "    \n",
+    "    def setwidth(self, width):\n",
+    "        print (\"called setwidth\")\n",
+    "        self._width = width\n",
+    "\n",
+    "    def getheight(self):\n",
+    "        print (\"called getheight\")\n",
+    "        return self._height\n",
+    "    \n",
+    "    def setheight(self, height):\n",
+    "        print (\"called setheight\")\n",
+    "        self._height = height\n",
+    "\n",
+    "    height = property(getheight, setheight)\n",
+    "    width = property(getwidth, setwidth)\n",
+    "\n",
+    "r1 = Rectangle(10, 20)\n",
+    "print(r1.width)\n",
+    "print(r1.height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "called getheight\n",
+      "20\n",
+      "called getwidth\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "## Is it possble to access the width and height directly? Why?\n",
     "print (r1.height)\n",
@@ -496,9 +630,12 @@
     "<h4> Questions </h4>\n",
     "<font size=\"5\">\n",
     "1. Question 1. Can we access the width and height directly without using the getter and setter methods in the above code? <br>\n",
+    "yes when we set the property of that variable\n",
     "2. Question 2. What is the difference between the above code and the code without property class? <br>\n",
+    "we shouldnt be able to directly call the variables without the getter and setter function\n",
     "3. Even though you can access the width and height directly, the \"called getwidth\" and \"called setwidth\" are printed. Why? Explain the reason.\n",
-    "</section>\n"
+    "</section>\n",
+    "it is bc we set the property for the getter and setter to call those functions which has the print within it"
    ]
   },
   {
@@ -522,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,9 +687,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Point' object has no attribute 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m p1 \u001b[38;5;241m=\u001b[39m Point(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39mx)     \u001b[38;5;66;03m# Even though x is a private attribute, we can access it through the getter method. Thus the \"through get_x()\" is printed.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39my)     \u001b[38;5;66;03m# Even though y is a private attribute, we can access it through the getter method. Thus the \"through get_y()\" is printed.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39m__x)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute 'x'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "p1 = Point(10, 20)\n",
@@ -576,10 +725,14 @@
     "<h4> Questions </h4>\n",
     "<font size=\"5\">\n",
     "1. Question 1: Is it possble to access the x and y directly? <br>\n",
+    "no not unless you are creating properties for it\n",
     "2. Question 2: When we print p1.x, the \"through get_x()\" is printed. Why? <br>\n",
+    "its is becaues we set the property for x to have the get_x function\n",
     "3. Question 3: Is there a way to access the x and y directly? without printing the \"through get_x()\" and \"through get_y()\"? <br>\n",
+    "no becaues we created a private variable unless we created a public variable that can be accessed without the getter and setter functions\n",
     "4. Question 4: Accessing p1.__x will cause an error. Why? <br>\n",
-    "</section>\n"
+    "</section>\n",
+    "because we are setting it as private\n"
    ]
   },
   {
@@ -601,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +781,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "through get_x()\n",
+      "10\n",
+      "through get_y()\n",
+      "20\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Point' object has no attribute 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[33], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39mget_y())     \u001b[38;5;66;03m# y is a private attribute, we can access it through the getter method. Thus the \"through get_y()\" is printed.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#print(p1.__x)          # This will cause an error because __x is a private attribute.\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m (p1\u001b[38;5;241m.\u001b[39mx)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute 'x'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "p1 = Point(10, 20)\n",
