--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -828,9 +828,12 @@
     "<h4> Questions </h4>\n",
     "<font size=\"5\">\n",
     "1. Question 1: Is it possble to access the x and y directly without using the getter method in the above code? <br>\n",
+    "no it is not possible\n",
     "2. Question 2: When we print p1.x and p1.__x, it causes an error. Why? How can we access it? <br>\n",
+    "__x is a private variable and the varibale x has no attribute, typically we would set the property of x to have the getter and setter function when we call x\n",
     "3. Question 3: What is the difference between the code with __property__ and the code without __property__? <br>\n",
-    "</section>\n"
+    "</section>\n",
+    "when we have property we can call x directly, which inhertly calls the getter funcion for x where as without it the x value has no attribute so we cannot dirrectly call it\n"
    ]
   },
   {
