--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,9 +903,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message (fixed) \"Hello\" :\n",
+      "- args: ('World',)\n",
+      "- kwargs: {'key1': 'Awesome', 'key2': 'Cool'}\n",
+      "Hello World, Awesome, Cool\n",
+      "Message (fixed) \"Hello\" :\n",
+      "- args: ('David',)\n",
+      "- kwargs: {'key1': 'Genius', 'key2': 'Cool'}\n",
+      "Hello David, Genius, Cool\n"
+     ]
+    }
+   ],
    "source": [
     "greet_function = returning_function('Hello')\n",
     "\n",
@@ -915,9 +930,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message (fixed) \"Bye\" :\n",
+      "- args: ('World',)\n",
+      "- kwargs: {'key1': 'Great', 'key2': 'to see you'}\n",
+      "Bye World, Great, to see you\n",
+      "Message (fixed) \"Bye\" :\n",
+      "- args: ('Everyone',)\n",
+      "- kwargs: {'key1': 'See you', 'key2': 'again'}\n",
+      "Bye Everyone, See you, again\n",
+      "<function returning_function.<locals>.inner_function at 0x000002A0F537F920>\n"
+     ]
+    }
+   ],
    "source": [
     "bye_function = returning_function('Bye')\n",
     "\n",
@@ -929,9 +960,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function returning_function.<locals>.inner_function at 0x000002A0F52711C0>\n"
+     ]
+    }
+   ],
    "source": [
     "print (returning_function('Hello'))"
    ]
@@ -955,7 +994,9 @@
     "<h4> Questions </h4>\n",
     "<font size=\"5\">\n",
     "1. Question 1: What is returned value from the returning_function? Try to print the returned value. print(returning_function('Hello')) <br>\n",
+    "the value is a function\n",
     "2. Question 2: What is the difference between the \"greet_function\" and \"bye_function\"? <br>\n",
+    "the only difference was the passed in arguments for the code\n",
     "3. Question 3: Show the output of the following code. <br>\n",
     "<code>\n",
     "greet_function('World', key1='Awesome', key2='Cool') <br>\n",
@@ -968,6 +1009,7 @@
     "</code>\n",
     "5. Question 5: Explain the output difference between the greet_function and bye_function. \n",
     "Where the \"Message (fixed) param\" come from?<br>\n",
+    "the message fixed param came from the first function we set to equal, when we se the greeting functino to equal the returning function we passed in an argument for the returning funciton, because the greetfunciton now equals the returning funciton. when we pass in an argument into the greet funciton it becomes a decorator and calls the function nested within the returning funcitons\n",
     "\n",
     "\n"
    ]
@@ -981,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1046,12 +1088,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 8, 16]\n",
+      "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512]\n",
+      "[1, 3, 9, 27, 81]\n",
+      "[1, 3, 9, 27, 81, 243, 729, 2187, 6561, 19683]\n"
+     ]
+    }
+   ],
    "source": [
     "def power_function(n):\n",
+    "    def nth_power(r):\n",
+    "        return [pow(n,i) for i in range(r)]\n",
     "    ## your code here\n",
+    "    return nth_power\n",
     "\n",
     "power_of_2 = power_function(2)\n",
     "print (power_of_2(5))\n",
