--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1270,11 +1270,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Calculation:\n",
+      "Calculations has finished:\n",
+      "15\n",
+      "Starting Calculation:\n",
+      "Calculations has finished:\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
-    "### Code your solution here.\n"
+    "### Code your solution here.\n",
+    "def operation_logger(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        print(\"Starting Calculation:\")\n",
+    "        results = func(*args, **kwargs)\n",
+    "        print(\"Calculations has finished:\")\n",
+    "        return results\n",
+    "    return wrapper\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "def calculator(num1,num2,operation):\n",
+    "    if operation == \"add\":\n",
+    "        return num1 + num2\n",
+    "    elif operation == \"subtract\":\n",
+    "        return num1 - num2\n",
+    "    elif operation == 'multiply':\n",
+    "        return num1 * num2\n",
+    "    elif operation == 'divide':\n",
+    "        return num1 / num2\n",
+    "    else:\n",
+    "        return \"Error invalid input\"\n",
+    "\n",
+    "calculato = operation_logger(calculator)\n",
+    "print(calculato(10,5,'add'))\n",
+    "\n",
+    "print(calculato(10,5,'multiply'))"
    ]
   },
   {
@@ -1307,6 +1347,34 @@
     " 1. Create the greet() function that takes a name parameter\n",
     " 2. Create the uppercase_decorator and its wrapper function\n",
     " 3. Apply the decorator to greet() and test it\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, baran\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name):\n",
+    "    return f\"Hello, {name}\"\n",
+    "\n",
+    "def uppercase_decorator(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        results = func(*args, **kwargs)\n",
+    "        return results\n",
+    "    return wrapper\n",
+    "\n",
+    "greetings = uppercase_decorator(greet)\n",
+    "\n",
+    "print(greetings(\"baran\"))"
    ]
   },
   {
@@ -1344,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1940,7 @@
        "MyClass ([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2094,7 @@
        "[[2, 3, 4]]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,16 +2163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID: 1, Values: 1, 2, 3, 4, 5\n",
-      "ID: 2, Values: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10\n",
-      "ID: 1, Values: 1, 2, 3, 4, 5\n"
+     "ename": "TypeError",
+     "evalue": "Numbers.__init__() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[40], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m values1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m]\n\u001b[0;32m      5\u001b[0m values2 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m----> 6\u001b[0m obj1 \u001b[38;5;241m=\u001b[39m Numbers(\u001b[38;5;241m1\u001b[39m, values1)\n\u001b[0;32m      7\u001b[0m obj2 \u001b[38;5;241m=\u001b[39m Numbers(\u001b[38;5;241m2\u001b[39m, values2)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj1)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Numbers.__init__() takes 2 positional arguments but 3 were given"
      ]
     }
    ],
@@ -2135,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
