--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1511,11 +1511,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 46, 38, 33, 48, 19, 47, 15, 3, 42, 4, 39, 18, 31, 42, 11, 19, 37, 47, 37, 20, 43, 38, 24, 2, 9, 37, 4, 1, 48, 47, 9, 5, 39, 4, 12, 42, 33, 40, 22, 26, 3, 16, 44, 35, 6, 34, 28, 36, 31, 34]\n"
+     ]
+    }
+   ],
    "source": [
-    "### Code your solution here.\n"
+    "import random\n",
+    "### Code your solution here.\n",
+    "def filter_random_numbers(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        results = func(*args, **kwargs)\n",
+    "        filter = [i for i in results if i <= 50]\n",
+    "                \n",
+    "        return filter\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "\n",
+    "@filter_random_numbers\n",
+    "def generate_randome_numbers():\n",
+    "    lst = []\n",
+    "    n = random.randint(1,100)\n",
+    "    for i in range (n):\n",
+    "        lst.append(random.randint(1,100))\n",
+    "    return lst\n",
+    "    \n",
+    "    \n",
+    "results = generate_randome_numbers()\n",
+    "print(results)"
    ]
   },
   {
