--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1581,11 +1581,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "Error: All argumenst must be positive\n"
+     ]
+    }
+   ],
    "source": [
-    "### Code your solution here.\n"
+    "### Code your solution here.\n",
+    "def validate_input(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        results = func(*args,**kwargs)\n",
+    "        if results < 0:\n",
+    "            return \"Error: All argumenst must be positive\"\n",
+    "        return results\n",
+    "    return wrapper\n",
+    "\n",
+    "@validate_input\n",
+    "def multiply_numbers(*args):\n",
+    "    results = 1\n",
+    "    for num in args:\n",
+    "        results *= num\n",
+    "    return results\n",
+    "\n",
+    "print(multiply_numbers(2,3,4))\n",
+    "print(multiply_numbers(2,-3,4))\n"
    ]
   },
   {
@@ -1633,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
