--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1845,12 +1845,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "0\n",
+      "100 200\n"
+     ]
+    }
+   ],
    "source": [
     "### Code your solution here.\n",
-    "\n"
+    "class Rectangle:\n",
+    "    def __init__(self,width,height):\n",
+    "        self.__width = width\n",
+    "        self.__height = height\n",
+    "    \n",
+    "    @property\n",
+    "    def height(self):\n",
+    "        return self.__height\n",
+    "    \n",
+    "    @height.setter\n",
+    "    def height(self,n):\n",
+    "        if n < 0:\n",
+    "            self.__height = 0\n",
+    "        else:\n",
+    "            self.__height = n\n",
+    "    \n",
+    "    @property\n",
+    "    def width(self):\n",
+    "        return self.__width\n",
+    "    \n",
+    "    @width.setter\n",
+    "    def width(self,n):\n",
+    "        if n < 0:\n",
+    "            self.__width = 0\n",
+    "        else:\n",
+    "            self.__width = n\n",
+    "\n",
+    "r1 = Rectangle(10, 20) \n",
+    "print(r1.width)     # 10\n",
+    "r1.width = -10\n",
+    "print(r1.width)     # 0\n",
+    "r2 = Rectangle(100, 200)\n",
+    "print (r2.width, r2.height)"
    ]
   },
   {
