--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
        "MyClass ([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2192,7 +2192,7 @@
        "[[2, 3, 4]]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,11 +2245,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Code your solution here.\n"
+    "## Code your solution here.\n",
+    "class Numbers:\n",
+    "    def __init__(self,id,values):\n",
+    "        self.__id = id\n",
+    "        self.__values = values\n",
+    "    \n",
+    "    @property\n",
+    "    def id(self):\n",
+    "        return self.__id\n",
+    "    \n",
+    "    @id.setter\n",
+    "    def id(self,n):\n",
+    "        self.__id = n\n",
+    "        \n",
+    "    @property\n",
+    "    def values(self):\n",
+    "        return self.__values\n",
+    "    \n",
+    "    @values.setter\n",
+    "    def values(self,n):\n",
+    "        self.__values = n\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return (f\"Id: {self.__id}\\tValues: {self.__values}\")\n",
+    "    \n",
+    "    def __getitem__(self, n):\n",
+    "        return self.__values[n]\n",
+    "    \n",
+    "    def __setitem__(self,n,value):\n",
+    "        if n < len(self.__values):\n",
+    "            self.__values[n] = value\n",
+    "        else:\n",
+    "            return \"No a valid index\"\n",
+    "        \n",
+    "    \n",
+    "    def __gt__(self,n):\n",
+    "        if max(self.__values) > max(n.__values):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def __lt__(self,n):\n",
+    "        if min(self.__values) < min(n.__values):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def __sub__(self,n):\n",
+    "        return sum(self.__values) - sum(n.__values)\n",
+    "    def __add__(self, n):\n",
+    "        return sum(self.__values) + sum(n.__values)\n",
+    "        \n",
+    "    def __eq__(self,other):\n",
+    "        if len(self.__values) <= len(other.values):\n",
+    "            return True if all(i in other.values for i in self.values) else False\n",
+    "        else:\n",
+    "            return True if all(i in self.values for i in other.values) else False\n",
+    "        \n"
    ]
   },
   {
@@ -2261,18 +2318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Numbers.__init__() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[40], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m values1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m]\n\u001b[0;32m      5\u001b[0m values2 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m----> 6\u001b[0m obj1 \u001b[38;5;241m=\u001b[39m Numbers(\u001b[38;5;241m1\u001b[39m, values1)\n\u001b[0;32m      7\u001b[0m obj2 \u001b[38;5;241m=\u001b[39m Numbers(\u001b[38;5;241m2\u001b[39m, values2)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj1)\n",
-      "\u001b[1;31mTypeError\u001b[0m: Numbers.__init__() takes 2 positional arguments but 3 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id: 1\tValues: [1, 2, 3, 4, 5]\n",
+      "Id: 2\tValues: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Id: 1\tValues: [100, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -2303,14 +2358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID: 1, Values: 100, 200, 300, 400, 500\n"
+      "Id: 1\tValues: [100, 200, 300, 400, 500]\n"
      ]
     }
    ],
@@ -2333,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2399,7 @@
       "70\n",
       "True\n",
       "False\n",
-      "True\n"
+      "False\n"
      ]
     }
    ],
